--- a/style.css
+++ b/style.css
@@ -74,7 +74,11 @@ textarea {
   height: 60px;
 }
 
-span {
+.outOfStock {
+  text-decoration: line-through;
+}
+
+/* span {
   display: inline-block;
   height: 40px;
-}
+} */
